--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,7 +39,7 @@ models:
   my_new_project:
     # Applies to all files under models/mart/
     mart:
-      +materialized: view
+      +materialized: table
       finance:
         +schema:
 
